--- a/test/fixtures/stores.yml
+++ b/test/fixtures/stores.yml
@@ -1,3 +1,18 @@
+# == Schema Information
+#
+# Table name: stores
+#
+#  id         :integer          not null, primary key
+#  name       :string(255)
+#  klass      :string(255)
+#  price      :integer
+#  distance   :integer
+#  level      :integer
+#  logo       :string(255)
+#  created_at :datetime         not null
+#  updated_at :datetime         not null
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 # This model initially had no columns defined.  If you add columns to the
